Add GitHub Actions for multi-arch Docker builds
- Add docker-build.yml workflow for automated multi-architecture builds (AMD64/ARM64)
- Add test.yml workflow for code quality checks and Docker validation
- Publish images to GitHub Container Registry (ghcr.io)
- Support semantic versioning with proper tagging
- Add GitHub Actions badges to README
- Update documentation with pre-built image usage instructions
- Update sage.yaml to reference container registry images
- Mark deployment automation as completed in TODO.md

Features:
- Multi-platform builds: linux/amd64, linux/arm64
- Automated publishing on push to main and tags
- Layer caching for faster builds
- Code linting with flake8, black, and isort
- Docker build validation on pull requests

--- a/sage.yaml
+++ b/sage.yaml
@@ -10,9 +10,15 @@ license: "MIT"
 
 sources:
   - architectures:
-      - "linux/amd64"
+      - "linux/amd64" 
       - "linux/arm64"
     url: "."
+    
+images:
+  - name: "ghcr.io/YOUR_USERNAME/waggle-davis-wind-sensor:latest"
+    architectures:
+      - "linux/amd64"
+      - "linux/arm64"
 
 resources:
   - name: "davis-wind-sensor"
