Implement configurable data averaging with vector-based wind direction
Major Features:
- Configurable MQTT reporting intervals (default 60 seconds)
- Proper circular statistics for wind direction averaging
- Wind direction consistency metrics (0.0-1.0 scale)
- Dual-mode reporting: real-time debug + averaged environmental data

WindDataCollector Class:
- Collects readings over configurable time intervals
- Arithmetic averaging for wind speed
- Vector averaging for wind direction (handles 0°/360° wrap-around correctly)
- Calculates wind consistency metric from vector magnitude
- Automatic interval management and data reset

Environmental Data (MQTT - Averaged):
- env.wind.speed: Averaged wind speed in knots
- env.wind.direction: Vector-averaged wind direction
- env.wind.speed.mps: Averaged wind speed in m/s
- env.wind.consistency: NEW - Wind direction variability metric
- Metadata includes sample count and interval duration

Debug Data (Real-time):
- All davis.wind.* topics published immediately
- Raw sensor values, RPM data, iteration counters
- System status and error tracking

Vector Averaging Algorithm:
- Convert each direction to unit vector (cos θ, sin θ)
- Average vector components
- Convert back to angle with atan2
- Result magnitude indicates consistency (1.0=steady, 0.0=variable)

Web Interface Updates:
- Shows last MQTT report timestamp
- Displays readings since last report
- Real-time individual readings still visible
- Enhanced dashboard with averaging status

Configuration:
- New --reporting-interval argument (default 60s)
- Examples: 10s for high-freq, 300s for 5-min averaging
- Web interface shows individual readings regardless of interval

Benefits:
- Meteorologically accurate wind direction averaging
- Noise reduction through temporal averaging
- Quality indicators via consistency metrics
- Maintains real-time monitoring capability
- Configurable for different use cases

Documentation:
- Comprehensive README section on data averaging
- Vector averagi

--- a/sage.yaml
+++ b/sage.yaml
@@ -1,5 +1,5 @@
 name: "davis-wind-sensor"
-description: "Davis wind sensor plugin for Waggle framework that interfaces with Davis anemometer and wind vane sensors via Arduino microcontroller. Reads wind speed and direction data from USB serial port, performs real-time calibration and unit conversion, and publishes environmental measurements including wind speed in knots, wind direction in degrees, plus comprehensive debug information with rotations per second and raw sensor values. Designed for continuous environmental monitoring and meteorological research applications."
+description: "Davis wind sensor plugin for Waggle framework that interfaces with Davis anemometer and wind vane sensors via Arduino microcontroller. Reads wind speed and direction data from USB serial port, performs configurable interval averaging with proper circular statistics for wind direction, and publishes meteorologically accurate environmental measurements including averaged wind speed in knots, vector-averaged wind direction in degrees, and wind consistency metrics. Features real-time calibration, unit conversion, and comprehensive debug information with rotations per second and raw sensor values. Designed for continuous environmental monitoring and meteorological research applications."
 version: "1.0.0"
 namespace: "sage"
 keywords: ["davis", "wind", "sensor", "weather", "serial", "anemometer", "arduino"]
@@ -67,6 +67,7 @@ resources:
     arguments:
       - "--port=/dev/ttyUSB0"
       - "--baudrate=9600"
+      - "--reporting-interval=60"
     env:
       - name: "PLUGIN_NAME"
         value: "davis-wind-sensor"
@@ -126,6 +127,13 @@ outputs:
     sensor_name: "Davis Anemometer"
     sampling_rate: "1Hz"
     range: "0-77"
+  - name: "env.wind.consistency"
+    type: "float"
+    units: "ratio"
+    description: "Wind direction consistency metric (1.0=steady, 0.0=highly variable)"
+    sensor_name: "Davis Wind Vane"
+    sampling_rate: "configurable"
+    range: "0-1"
   
   # Davis-specific debug measurements
   - name: "davis.wind.rps"
