Add wind speed min/max tracking (lull and gust measurements)
Features:
- Track minimum and maximum wind speeds during each averaging interval
- Publish lull and gust data as new MQTT topics
- Display min/max values in both web interfaces
- Enhanced logging with min/max information

WindDataCollector Updates:
- Added min/max tracking variables (knots and m/s)
- Track min/max values in add_reading() method
- Include min/max in averaged data output
- Handle edge case where no readings collected

New MQTT Topics:
- env.wind.speed.min: Minimum wind speed (lull) in knots
- env.wind.speed.max: Maximum wind speed (gust) in knots
- env.wind.speed.min.mps: Minimum wind speed in m/s
- env.wind.speed.max.mps: Maximum wind speed in m/s
- All include interval and sample count metadata

Web Interface Updates:
- Dashboard: Added Min Speed (Lull) and Max Speed (Gust) metrics
- Simple HTML: Shows min/max speeds when available
- JavaScript: Handles min/max data with fallbacks
- Auto-refresh displays current interval extremes

Logging Enhancement:
- Log messages now include min/max values
- Format: 'avg knots (min: X, max: Y), direction (samples, consistency)'
- Provides immediate feedback on wind variability

Documentation Updates:
- README.md: Added min/max topics to data table
- sage.yaml: Added new output configurations
- TODO.md: Marked min/max tracking as completed
- Enhanced feature descriptions

Meteorological Benefits:
- Standard weather data: lull and gust measurements
- Wind variability assessment during intervals
- Critical for aviation, marine, and safety applications
- Complements existing averaging and consistency metrics

All min/max values reset with each averaging interval and track extremes
across all individual readings within that period.

--- a/sage.yaml
+++ b/sage.yaml
@@ -127,6 +127,34 @@ outputs:
     sensor_name: "Davis Anemometer"
     sampling_rate: "1Hz"
     range: "0-77"
+  - name: "env.wind.speed.min"
+    type: "float"
+    units: "knots"
+    description: "Minimum wind speed (lull) during averaging interval"
+    sensor_name: "Davis Anemometer"
+    sampling_rate: "configurable"
+    range: "0-150"
+  - name: "env.wind.speed.max"
+    type: "float"
+    units: "knots"
+    description: "Maximum wind speed (gust) during averaging interval"
+    sensor_name: "Davis Anemometer"
+    sampling_rate: "configurable"
+    range: "0-150"
+  - name: "env.wind.speed.min.mps"
+    type: "float"
+    units: "m/s"
+    description: "Minimum wind speed (lull) in m/s during averaging interval"
+    sensor_name: "Davis Anemometer"
+    sampling_rate: "configurable"
+    range: "0-77"
+  - name: "env.wind.speed.max.mps"
+    type: "float"
+    units: "m/s"
+    description: "Maximum wind speed (gust) in m/s during averaging interval"
+    sensor_name: "Davis Anemometer"
+    sampling_rate: "configurable"
+    range: "0-77"
   - name: "env.wind.consistency"
     type: "float"
     units: "ratio"
