Update sensor name to davis-anemometer-6410 for model specificity
Changed all sensor metadata from generic names (davis-anemometer, davis-wind-vane)
to specific model identifier davis-anemometer-6410 for better hardware traceability.

Files Updated:
- main.py: All plugin.publish() sensor metadata
- sage-generated.yaml: All sensor and sensor_name fields
- README.md: All sensor columns in data output tables
- CHANGES.md: Updated technical implementation notes

--- a/sage-generated.yaml
+++ b/sage-generated.yaml
@@ -111,8 +111,8 @@ outputs:
     type: "float"
     units: "knots" 
     description: "Wind speed in knots"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "1Hz"
     range: "0-150"
@@ -121,8 +121,8 @@ outputs:
     type: "float"
     units: "degrees"
     description: "Wind direction in degrees (0-360)"
-    sensor: "davis-wind-vane"
-    sensor_name: "Davis Wind Vane"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "1Hz"
     range: "0-360"
@@ -131,8 +131,8 @@ outputs:
     type: "float"
     units: "m/s"
     description: "Wind speed in meters per second"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "1Hz"
     range: "0-77"
@@ -141,8 +141,8 @@ outputs:
     type: "float"
     units: "knots"
     description: "Minimum wind speed (lull) during averaging interval"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "configurable"
     range: "0-150"
@@ -151,8 +151,8 @@ outputs:
     type: "float"
     units: "knots"
     description: "Maximum wind speed (gust) during averaging interval"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "configurable"
     range: "0-150"
@@ -161,8 +161,8 @@ outputs:
     type: "float"
     units: "m/s"
     description: "Minimum wind speed (lull) in m/s during averaging interval"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "configurable"
     range: "0-77"
@@ -171,8 +171,8 @@ outputs:
     type: "float"
     units: "m/s"
     description: "Maximum wind speed (gust) in m/s during averaging interval"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "configurable"
     range: "0-77"
@@ -181,8 +181,8 @@ outputs:
     type: "float"
     units: "ratio"
     description: "Wind direction consistency metric (1.0=steady, 0.0=highly variable)"
-    sensor: "davis-wind-vane"
-    sensor_name: "Davis Wind Vane"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "beehive"
     sampling_rate: "configurable"
     range: "0-1"
@@ -194,8 +194,8 @@ outputs:
     type: "float"
     units: "rps"
     description: "Wind sensor rotations per second"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     missing_value: -9999.0
@@ -203,8 +203,8 @@ outputs:
     type: "integer"
     units: "rpm"
     description: "Debounced RPM count from Davis sensor"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     missing_value: -9999.0
@@ -212,8 +212,8 @@ outputs:
     type: "integer"
     units: "rpm"
     description: "Raw RPM count from Davis sensor"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Anemometer"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     missing_value: -9999.0
@@ -221,8 +221,8 @@ outputs:
     type: "integer"
     units: "counts"
     description: "Raw potentiometer value for wind direction"
-    sensor: "davis-wind-vane"
-    sensor_name: "Davis Wind Vane"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     range: "0-1024"
@@ -231,8 +231,8 @@ outputs:
     type: "integer"
     units: "count"
     description: "Arduino iteration counter"
-    sensor: "davis-anemometer"
-    sensor_name: "Arduino"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     missing_value: -9999
@@ -240,8 +240,8 @@ outputs:
     type: "integer"
     units: "status"
     description: "Davis wind sensor status (0=error, 1=ok)"
-    sensor: "davis-anemometer"
-    sensor_name: "Davis Wind Sensor System"
+    sensor: "davis-anemometer-6410"
+    sensor_name: "Davis Anemometer 6410"
     scope: "node"
     sampling_rate: "1Hz"
     range: "0-1"
